kv1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-kv1
spec:
  finalizers:
  - kubernetes
