kv1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: vault-demo
  name: vault-demo
spec:
  rules:
  - host: vault-demo
    http:
      paths:
      - backend:
          serviceName: vault-demo
          servicePort: 8080
        path: "/"
